# data-structures-project

./: .gitignore  README.md  a.out
src/: linked_list.cpp  main.cpp  stack.cpp
zad1/: README.md  config.ini  results.csv  results.ods
zad1/src/: container.cpp  linked_list.cpp  main.cpp  stack.cpp  vector.cpp
zad2/: README.md  charts.ods
zad2/rust/: Cargo.toml
zad2/rust/benches/: benchmark.rs
zad2/rust/src/: lib.rs  main.rs
zad3/: Cargo.toml  README.md  config.ini  results.csv  results.ods
zad3/benches/: benchmark.rs
zad3/src/: bst.rs  lib.rs  main.rs  rbtree.rs  tree.rs
zad4/: Cargo.toml  README.md  config.ini  results.bak.csv  results.csv  results.ods
zad4/src/: adj_list.rs  adj_matrix.rs  bundle.rs  incidence_matrix.rs  lib.rs  main.rs
