[package]
name = "zad3"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.3", features=["small_rng"] }
rb_tree = "0.4.1"
rand_distr = "0.4.0"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmark"
harness = false