[package]
name = "zad4"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.4", features=["small_rng"] }

[profile.release]
debug = true