[package]
name = "zad2-sorting"
version = "0.1.0"
authors = ["Marcel Guzik <mguzik555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.8.3", features=["small_rng"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
